# ansiconverter

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml
ansiconverter/: __init__.py  converter.py  styles.py
src/: ansiconverter.py
test/: test_ansiconverter.py  test_styles.py
tests/: test_ansiconverter.py
